testsuite/tests/indexed-types/should_fail/T5515.stderr

T5515.hs:9:3: error:
    The RHS of an associated type declaration mentions out-of-scope variable ‘a’
      All such variables must be bound on the LHS

T5515.hs:15:3: error:
    The RHS of an associated type declaration mentions out-of-scope variable ‘a’
      All such variables must be bound on the LHS
